# SwarmAgent

./: .gitignore  Dockerfile  README.md  idea-factory.Dockerfile  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
k8s/: deployment.yaml  idea-factory.yaml  job.yaml
prompts/instructions/: review.md  triage.md
prompts/persona/: reviewer.md  triager.md
src/swarm_agent/: __init__.py  __main__.py  agent.py  config.py  github_client.py  llm.py  persona.py  telemetry.py
src/swarm_agent/dashboard/: __init__.py  __main__.py  app.py
src/swarm_agent/idea_factory/: __init__.py  __main__.py  app.py
src/swarm_agent/idea_factory/templates/: index.html
tests/: test_agent.py  test_config.py  test_idea_factory.py  test_llm.py  test_persona.py  test_telemetry.py
